# multimodal-ai-assistant

./: .gitignore  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  hatch_build.py  pyproject.toml
docs/: LOW_VRAM_MODE_README.md
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  theme.ts  types.ts
frontend/src/audio/: mic.ts  player.ts
frontend/src/components/: CharacterProfileModal.tsx  ControlSidebar.tsx  ConversationPanel.tsx  DebugModal.tsx  MessageItem.tsx  ModelStatusPanel.tsx  RealtimeStatusPanel.tsx  SettingsModal.tsx  TextInputArea.tsx  index.ts
src/aiassistant/: .env.example  __init__.py  app.py  config.py  engine_manager.py  logger.py  routes.py  state.py  websocket.py
src/aiassistant/imageexplainer/: __init__.py  base.py  image_explainer.py
src/aiassistant/imagegen/: __init__.py  base.py  image_generator.py
src/aiassistant/llm/: __init__.py  base.py  ollama.py
src/aiassistant/stt/: __init__.py  base.py  whisper.py
src/aiassistant/tts/: __init__.py  base.py  chatterbox.py  piper.py  soprano.py
src/aiassistant/utils/: __init__.py  audio.py  file.py  image.py  resource_monitor.py  text.py
